--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,18 @@ body {
   font-family: sans-serif;
 }
 
+.envios {
+  width: 100%;
+  background-color: #12426B;
+  height: 40px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: small;
+  font-weight: bold;
+}
+
 .sec-home {
   display: flex;
   width: 100%;
@@ -292,6 +304,9 @@ body {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
+}
+.alisados img {
+  object-fit: cover;
 }
 
 .text-alisados h1 {
